--- a/apiUser/src/main/resources/application.yml
+++ b/apiUser/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/user_db
-    username: user1
-    password: user1
+    username: root
+    password: root
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -12,3 +12,16 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+kafka:
+  topics:
+    - notify-topic
+  consumer:
+    auto-offset-reset: latest
+server:
+  port: 8090
+
