--- a/apiUser/src/main/resources/docker-compose.yml
+++ b/apiUser/src/main/resources/docker-compose.yml
@@ -1,17 +1,72 @@
 version: '3.8'
+
 services:
   postgres:
     image: postgres:latest
-    container_name: postgres_container
+    container_name: postgress_apiuser  # Novo nome para o container
     environment:
-      POSTGRES_USER: fran
-      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
       POSTGRES_DB: user_db
     ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-  "5432:5432"
-volumes:
-  postgres_data:/var/lib/postgresql/data
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    container_name: zookeeper_apiuser  # Novo nome para o container
+    ports:
+      - "2181:2181"
+    networks:
+      - kafka-net
+
+  kafka:
+    image: wurstmeister/kafka:latest
+    container_name: kafka_apiuser  # Novo nome para o container
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "notify-topic:3:1"  # Tópico para o notify
+    networks:
+      - kafka-net
+    depends_on:
+      - zookeeper
+
+  mongo:
+    image: mongo
+    container_name: mongo_apiuser
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+    ports:
+      - "27017:27017"  # Mapeando a porta
+  
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express_apiuser  # Novo nome para o container
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
+
+networks:
+  kafka-net:
+    driver: bridge
+
 volumes:
   postgres_data:
+    driver: local
+  mongo_data:
     driver: local
